--- a/src/components/ProductList/productList.module.css
+++ b/src/components/ProductList/productList.module.css
@@ -1,4 +1,3 @@
-/* 2열 그리드 컨테이너 */
 .container {
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -6,7 +5,6 @@
   width: 100%;
 }
 
-/* 카드 하나 */
 .productCard {
   background: #ffffff;
   border-radius: 16px;
@@ -19,11 +17,10 @@
   min-height: 180px;
 }
 
-/* 이미지 영역 (작게) */
 .imageContainer {
   position: relative;
   width: 100%;
-  height: 90px;               /* ← 여기서 확 줄였어 */
+  height: 90px;              
   background: #f5f5f5;
   overflow: hidden;
   border-radius: 16px 16px 0 0;
@@ -35,7 +32,6 @@
   object-fit: cover;
 }
 
-/* 뱃지는 그대로 */
 .topBadges {
   position: absolute;
   top: 5px;
@@ -82,7 +78,6 @@
   font-weight: 600;
 }
 
-/* 텍스트 영역 (좀 더 여유) */
 .productInfo {
   display: flex;
   flex-direction: column;
@@ -97,7 +92,7 @@
   font-weight: 600;
   color: #111;
   line-height: 1.35;
-  min-height: 34px; /* 2줄 자리 */
+  min-height: 34px; 
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
@@ -118,7 +113,6 @@
   line-height: 1.3;
 }
 
-/* 아주 좁으면 1열 */
 @media (max-width: 360px) {
   .container {
     grid-template-columns: 1fr;
